--- a/GameRandomizer/ShellWindow.xaml
+++ b/GameRandomizer/ShellWindow.xaml
@@ -212,7 +212,7 @@
                         </Grid>
                         <Grid Width="250" Height="50" Margin="10">
                             <Label Content="Текст режимов" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-                            <ComboBox Width="150" VerticalAlignment="Center">
+                            <ComboBox Width="150" VerticalAlignment="Center" SelectionChanged="ComboBox_SelectionChanged">
                                 <TextBox Name="ModeSettings1"  Width="150" Height="25" HorizontalAlignment="Left"/>
                                 <TextBox Name="ModeSettings2"  Width="150" Height="25" HorizontalAlignment="Left"/>
                             </ComboBox>
@@ -246,17 +246,17 @@
                         <Grid Width="550" Height="50" Margin="10">
                             <Label Content="Заголовок" HorizontalAlignment="Left" VerticalAlignment="Center"/>
                             <TextBox Name="SaveTextForHead" Width="300" Height="25" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                            <Button Name="SaveHead" Content="Button" Margin="10" HorizontalAlignment="Right" VerticalAlignment="Top" Click="SaveHead_Click"/>
+                            <Button Content="Сохранить" Margin="10" HorizontalAlignment="Right" VerticalAlignment="Top" Click="SaveHead_Click"/>
                         </Grid>
                         <Grid Width="550" Height="50" Margin="10">
                             <Label Content="Добавление игры" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-                            <TextBox Width="300" Height="25" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                            <Button Name="SaveGame" Content="Button" Margin="10" HorizontalAlignment="Right" VerticalAlignment="Top" Click="SaveGame_Click"/>
+                            <TextBox Name="SaveTextForGame" Width="300" Height="25" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            <Button Name="SaveGame" Content="Сохранить" Margin="10" HorizontalAlignment="Right" VerticalAlignment="Top" Click="SaveGame_Click"/>
                         </Grid>
                         <Grid Width="550" Height="50" Margin="10">
                             <Label Content="Добавление фраз" HorizontalAlignment="Left" VerticalAlignment="Center"/>
                             <TextBox Name="SaveTextForPhrases" Width="300" Height="25" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                            <Button Name="SavePhrases" Content="Button" Margin="10" HorizontalAlignment="Right" VerticalAlignment="Top" Click="SavePhrases_Click"/>
+                            <Button Content="Сохранить" Margin="10" HorizontalAlignment="Right" VerticalAlignment="Top" Click="SavePhrases_Click"/>
                         </Grid>
                     </WrapPanel>
 
